# picowindoze

./: CMakeLists.txt  README.md  main.c  watch.py
WR2_Files/: USB_C_USB4135-GF-A.stl  box.hiplc
WR2_Files/EXPORTS/Enclosure - Sent for printing 0120/: Main - Bottom.stl  Main - Handle.stl  Main - Top.stl
openocd/: picoblink.elf  picowindoze.elf  rp2040.cfg
